Added js scripts for animating credentials(counter up), courses(stagger effect) teachers(tilt + parallax) and reviews(magnetic hover)

--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
             <div>
                 <i class="fa-solid fa-flag-checkered"></i>
                 <div>
-                    <span>2000</span>
+                    <span data-count="2000">0</span>
                     <h5>Success Stories</h5>
                 </div>
                 
@@ -455,21 +455,21 @@
             <div>
                 <i class="fa-solid fa-person-chalkboard"></i>
                 <div>
-                    <span>180</span>
+                    <span data-count="180">0</span>
                     <h5>Dedicated Tutors</h5>
                 </div>         
             </div>
             <div>
                 <i class="fa-regular fa-newspaper"></i>  
                 <div>
-                    <span>85</span>
+                    <span data-count="85">0</span>
                     <h5>Courses</h5>
                 </div>            
             </div>
             <div>
                 <i class="fa-solid fa-graduation-cap"></i>
                 <div>
-                    <span>80k+</span>
+                    <span data-count="80000">0</span>
                     <h5>Students</h5>
                 </div>          
             </div>
@@ -478,21 +478,21 @@
             <div>
                 <i class="fa-solid fa-award"></i>
                 <div>
-                    <span>26</span>
+                    <span data-count="26">0</span>
                     <h5>Awards</h5>
                 </div>           
             </div>
             <div>
                 <i class="fa-solid fa-calendar-days"></i>
                 <div>
-                    <span>55</span>
+                    <span data-count="55">0</span>
                     <h5>Events</h5>
                 </div>     
             </div>
             <div>
                 <i class="fa-brands fa-google"></i>
                 <div>
-                    <span>30+</span>
+                    <span data-count="30000">0</span>
                     <h5>Working in<br> Faang</h5>
                 </div>         
             </div>
@@ -503,7 +503,7 @@
 
 <!-- CERTIFIED TEACHERS SECTION -->
 <section id="certified-teachers">
-    <div class="teachers-container">
+    <div class="teachers-container"> 
         <div class="teachers-header">
             <div class="subheader-Container">
                 <hr>
@@ -619,7 +619,7 @@
 </section>
 
 <!-- STUDENT TESTIMONIALS SECTION -->
-<section id="student-reviews">
+<section id="student-reviews"> 
     <div class="reviews-container">
         <div class="reviews-header">
             <div class="subheader-Container">
@@ -841,6 +841,7 @@
     </div>
 </footer>
     
+<script src="./script1.js"></script>
 
 </body>
 
