Made these sections responsive for all views-- Header, Hero section, Login form and Float features section

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
                 <li><a href="#">Contact us</a></li>
             </ul>
         </div>
+        <div class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
         <div class="ctaContainer">
             <i class="fa-solid fa-magnifying-glass"></i>
             <i class="fa-solid fa-cart-shopping"></i>
