--- a/index.html
+++ b/index.html
@@ -502,8 +502,8 @@
     </div>
 </section>
 <!------------------------------------------Credentials ends here-------------------------------------------------------------------------->
+<!------------------------------------------Certified Teachers starts here-------------------------------------------------------------------------->
 
-<!-- CERTIFIED TEACHERS SECTION -->
 <section id="certified-teachers">
     <div class="teachers-container"> 
         <div class="teachers-header">
@@ -517,7 +517,6 @@
         </div>
 
         <div class="teachers-grid">
-            <!-- Teacher Card 1 -->
             <div class="teacher-card">
                 <div class="teacher-image">
                     <img src="Images/teacher1.jpg" alt="Arjun Singh">
@@ -542,7 +541,6 @@
                 </div>
             </div>
 
-            <!-- Teacher Card 2 -->
             <div class="teacher-card">
                 <div class="teacher-image">
                     <img src="Images/teacher2.jpg" alt="Rajesh Kumar">
@@ -567,7 +565,6 @@
                 </div>
             </div>
 
-            <!-- Teacher Card 3 -->
             <div class="teacher-card">
                 <div class="teacher-image">
                     <img src="Images/teacher3.jpg" alt="Vihaan Patel">
@@ -592,7 +589,6 @@
                 </div>
             </div>
 
-            <!-- Teacher Card 4 -->
             <div class="teacher-card">
                 <div class="teacher-image">
                     <img src="Images/teacher4.jpg" alt="Saanvi Reddy">
@@ -620,7 +616,9 @@
     </div>
 </section>
 
-<!-- STUDENT TESTIMONIALS SECTION -->
+<!------------------------------------------Certified Teachers ens here-------------------------------------------------------------------------->
+<!------------------------------------------Student Testimonials starts here-------------------------------------------------------------------------->
+
 <section id="student-reviews"> 
     <div class="reviews-container">
         <div class="reviews-header">
@@ -634,7 +632,6 @@
         </div>
 
         <div class="reviews-grid">
-            <!-- Review Card 1 -->
             <div class="review-card">
                 <div class="review-header">
                     <div class="reviewer-avatar">
@@ -655,7 +652,6 @@
                 <p class="review-text">"CodeOne helped me transition into web development with confidence. The structured curriculum and mentorship were game-changers!"</p>
             </div>
 
-            <!-- Review Card 2 -->
             <div class="review-card">
                 <div class="review-header">
                     <div class="reviewer-avatar">
@@ -676,7 +672,6 @@
                 <p class="review-text">"The live doubt sessions are incredibly helpful. Teachers respond quickly and explain concepts in an easy-to-understand manner."</p>
             </div>
 
-            <!-- Review Card 3 -->
             <div class="review-card">
                 <div class="review-header">
                     <div class="reviewer-avatar">
@@ -697,7 +692,6 @@
                 <p class="review-text">"The practical projects in the course perfectly mirror real-world scenarios. I gained confidence and landed a job within 2 months!"</p>
             </div>
 
-            <!-- Review Card 4 -->
             <div class="review-card">
                 <div class="review-header">
                     <div class="reviewer-avatar">
@@ -718,7 +712,6 @@
                 <p class="review-text">"The best investment I made for my career. The curriculum is modern, the teachers are experts, and the support is exceptional."</p>
             </div>
 
-            <!-- Review Card 5 -->
             <div class="review-card">
                 <div class="review-header">
                     <div class="reviewer-avatar">
@@ -739,7 +732,6 @@
                 <p class="review-text">"Highly recommend CodeOne! The instructors are knowledgeable and the doubt resolution sessions are a lifesaver for complex topics."</p>
             </div>
 
-            <!-- Review Card 6 -->
             <div class="review-card">
                 <div class="review-header">
                     <div class="reviewer-avatar">
@@ -763,7 +755,9 @@
     </div>
 </section>
 
-<!-- FOOTER SECTION -->
+<!------------------------------------------Student Testimonials ends here-------------------------------------------------------------------------->
+<!------------------------------------------Footer starts here-------------------------------------------------------------------------->
+
 <footer id="footer">
     <div class="footer-container">
         <div class="footer-content">
@@ -781,7 +775,6 @@
                 </div>
             </div>
 
-            <!-- Footer Section 2 - Quick Links -->
             <div class="footer-section">
                 <h5>Quick Links</h5>
                 <ul>
@@ -792,7 +785,6 @@
                 </ul>
             </div>
 
-            <!-- Footer Section 3 - Courses -->
             <div class="footer-section">
                 <h5>Popular Courses</h5>
                 <ul>
@@ -803,7 +795,6 @@
                 </ul>
             </div>
 
-            <!-- Footer Section 4 - Support -->
             <div class="footer-section">
                 <h5>Support</h5>
                 <ul>
@@ -814,7 +805,6 @@
                 </ul>
             </div>
 
-            <!-- Footer Section 5 - Legal -->
             <div class="footer-section">
                 <h5>Legal</h5>
                 <ul>
@@ -825,7 +815,6 @@
                 </ul>
             </div>
 
-            <!-- Footer Section 6 - Newsletter -->
             <div class="footer-section newsletter-section">
                 <h5>Subscribe to Newsletter</h5>
                 <p>Get the latest updates and course releases directly to your inbox.</p>
@@ -836,13 +825,14 @@
             </div>
         </div>
 
-        <!-- Footer Bottom -->
         <div class="footer-bottom">
             <p>&copy; 2025 CodeOne. All rights reserved. | Designed with <i class="fa-solid fa-heart"></i> by CodeOne Team</p>
         </div>
     </div>
 </footer>
-    
+
+<!------------------------------------------Footer starts here-------------------------------------------------------------------------->
+
 <script src="./main.js"></script>
 
 </body>
