Created authModal & its styles, updated formValidation with new modal; Updated newsletterModal with demo acknowledgement; Made both modals & newsletter section responsive

--- a/index.html
+++ b/index.html
@@ -1187,6 +1187,22 @@
 </footer>
 
 <!------------------------------------------Footer ends here-------------------------------------------------------------------------->
+<!------------------------------------------AuthModal starts here-------------------------------------------------------------------------->
+
+<div class="auth-modal hidden" id="authModal">
+    <div class="auth-modal-content">
+        <div class="auth-modal-icon">
+            <i class="fa-solid fa-circle-check"></i>
+        </div>
+
+        <h3 id="authModalTitle">Success</h3>
+        <p id="authModalMessage"></p>
+
+        <button id="authModalBtn">Continue</button>
+    </div>
+</div>
+
+<!------------------------------------------AuthModal ends here-------------------------------------------------------------------------->
 
 <script type="module" src="./Js/main.js"></script>
 
